# game-jam

./: COMMIT_TEST.txt  LICENSE  README.md  game-jam.apk  index.html  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md  feature_request.md
.github/workflows/: pygbag.yml
assets/sounds/: info.txt  ode-to-joy.ogg.cache  rushE.ogg.cache
assets/sprites/: info.txt
game-jam/: main.py
game_jam/: JellySmash.py  audio_processing.py  constants.py  events.py  gameplay.py  gui.py  main.py  settings.json  values.py  windows.py
game_jam/audio_cache/: gamemusic-6082.ogg.cache  gamemusic-6082.wav.cache  rushE.wav.cache
