[tool.poetry]
name = "game-jam"
version = "0.1.0"
description = "An MCC 1325 Game Jam entry"
authors = ["Ben Grelk"]
license = "mit"
readme = "README.md"
packages = [{include = "game_jam"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
pylint = "^2.15.10"
pyaudio = "^0.2.13"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
